# commercelens-analytics-warehouse

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-data.txt  requirements.txt
.github/workflows/: pages.yml
data/: README.md  SNAPSHOT.md  snapshot_manifest.json
data/fixtures/: olist_customers_dataset.csv  olist_order_items_dataset.csv  olist_order_payments_dataset.csv  olist_order_reviews_dataset.csv  olist_orders_dataset.csv  olist_products_dataset.csv  olist_sellers_dataset.csv
docs/: ANALYSIS.md  DEPLOYMENT.md
scripts/: build_report.py  download_olist.py
site/: index.html
sql/analysis/: analysis.sql
sql/marts/: marts.sql
sql/quality/: checks.sql
sql/staging/: staging.sql
src/commercelens/: __init__.py  analysis.py  cli.py  download.py  lineage.py  quality.py  report.py  warehouse.py
tests/: test_lineage.py  test_quality.py  test_report.py
