[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "commercelens-analytics-warehouse"
version = "1.0.0"
description = "Reproducible DuckDB and SQL analytics warehouse for public e-commerce data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1",
  "matplotlib>=3.8",
  "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
data = ["kaggle>=2.0"]

[project.scripts]
commercelens = "commercelens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
